--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "ethers": "^6.13.4",
     "lucide-react": "^0.540.0",
     "next": "^14.2.13",
-    "ox": "^0.8.7",
+    "ox": "^0.6.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
-    "viem": "^2.21.19",
+    "viem": "^2.23.2",
     "wagmi": "^2.16.4"
   },
   "devDependencies": {
@@ -31,5 +31,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "ox": "^0.6.9"
   }
 }
